--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="blue_700">#145C9C</color>
     <color name="gray_300">#ADADC8</color>
     <color name="gray_900">#16191E</color>
+    <color name="lila">#b695c0</color>
+    <color name="darklila">#503459</color>
+    <color name="softlila">#dac9df</color>
+
 </resources>
